# greek-double-accents

./: .gitignore  README.md  book.txt  double_accents.py  pyproject.toml
tests/: test_double_accents.py
